k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpdemo-service
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: httpdemo
