k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpdemo-ingress
  annotations:
    kubernetes.io/ingress.allow-http: 'false'
spec:
  tls:
    - hosts:
        - httpdemo.com
      secretName: httpdemo-tls
  rules:
    - host: httpdemo.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: httpdemo-service
                port:
                  number: 8080
